# coal4bar

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  analysis_report.json  coal4bar_interactive_demo.ipynb  configuration_comparison.csv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
.ipynb_checkpoints/: coal4bar_interactive_demo-checkpoint.ipynb
coal4bar/: __init__.py  forces.py  safety_analysis.py  simulation.py  structure.py  visualization.py
docs/: PHYSICS_AND_THEORY.md
examples/: example1_basic_configuration.py  example2_dynamic_simulation.py  example3_workspace_analysis.py
tests/: test_coal4bar.py
